# hello

./: .gitignore  CMakeLists.txt  Makefile  README.md
cmake/: helloConfig.cmake.in
examples/cli/: CMakeLists.txt  Makefile
examples/cli/src/: main.cpp
include/: hello.hpp
include/hello/: greeting.hpp
test/: test.cpp
